--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "dot-env": "^0.0.1",
     "lucide-react": "^0.563.0",
-    "next": "16.1.4",
+    "mongoose": "^9.1.5",
+    "next": "^16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
