--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "dot-env": "^0.0.1",
     "jsonwebtoken": "^9.0.3",
@@ -26,8 +24,7 @@
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.4.0",
-    "tanstack": "^1.0.2",
-    "tailwind-merge": "^3.4.0"
+    "tanstack": "^1.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
